selfhost/test/typechecker/lambda/error_type_mismatch.4.out
Error at %FILE_NAME%:1:16
Type mismatch
  |  [1, 2, 3].map((x: String) => x)
                    ^
Expected: Int
but instead found: String
