selfhost/test/typechecker/lambda/error_type_mismatch.4.abra
[1, 2, 3].map((x: String) => x)